# Quake2x-LE-src

./: Quake2x.ncb  Quake2x.sln  Quake2x.vcproj  README.md  config.h
data/: Makefile.am  Makefile.in
data/baseq2/: Makefile.am  Makefile.in  config.cfg
data/pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  adivtab.h  cd.c  cd_sdl.c  cdaudio.h  checksum.c  cl_cin.c  cl_fx.c  cl_input.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  cmd.c  common.c  console.c  d_copy.S  d_ifacea.h  d_polysa.S  files.c  game.h  gcc_attr.h  gl_draw.c  gl_fxmesa.c  gl_glx.c  gl_image.c  gl_light.c  gl_local.h  gl_mesh.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_warp.c  glw.h  keys.c  keys.h  m_flash.c  (+61 more)
src/baseq2/: Makefile.am  Makefile.in  g_cmds.c  g_combat.c  g_main.c  g_save.c  g_weapon.c  p_weapon.c  q_shared.c
src/ctf/: Makefile.am  Makefile.in  g_cmds.c  g_combat.c  g_ctf.c  g_items.c  g_monster.c  g_save.c  g_spawn.c  g_target.c  g_weapon.c  p_client.c  p_hud.c  p_weapon.c  q_shared.c
src/rogue/: Makefile.am  Makefile.in
src/xatrix/: Makefile.am  Makefile.in
